cmake_minimum_required(VERSION 2.8)
project(test)
set(CMAKE_CXX_FLAGS "-std=c++11 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-std=c++11 -O3")
include_directories("${PROJECT_SOURCE_DIR}/../test")
set(PROTO_LIST ${PROJECT_SOURCE_DIR}/../test/echo.pb.cc ${PROJECT_SOURCE_DIR}/../test/echo.rpc.cc)
add_executable(server.t server.cpp ${PROTO_LIST})
add_executable(client.t client.cpp ${PROTO_LIST})
set(LINK_ARGS "-lucorf -lnetwork -lcoroutine -lprotobuf -lboost_thread -lboost_system -lboost_regex -lzookeeper_mt -ldl -lpthread")
target_link_libraries(server.t ${LINK_ARGS})
target_link_libraries(client.t ${LINK_ARGS})
