cmake_minimum_required(VERSION 2.8)
project(test)
set(CMAKE_CXX_FLAGS "-std=c++11 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-std=c++11 -O3")
include_directories("${PROJECT_SOURCE_DIR}/../test")
set(PROTO_LIST ${PROJECT_SOURCE_DIR}/../test/echo.pb.cc ${PROJECT_SOURCE_DIR}/../test/echo.rpc.cc)
set(LINK_ARGS "-lucorf -lnetwork -lcoroutine -lprotobuf -lboost_thread -lboost_system -lboost_regex -lzookeeper_mt -ldl -lpthread")

add_executable(sample1_server.t sample1_server.cpp ${PROTO_LIST})
target_link_libraries(sample1_server.t ${LINK_ARGS})
add_executable(sample1_client.t sample1_client.cpp ${PROTO_LIST})
target_link_libraries(sample1_client.t ${LINK_ARGS})

add_executable(sample2_server.t sample2_server.cpp ${PROTO_LIST})
target_link_libraries(sample2_server.t ${LINK_ARGS})
add_executable(sample2_client.t sample2_client.cpp ${PROTO_LIST})
target_link_libraries(sample2_client.t ${LINK_ARGS})

add_executable(sample3_server.t sample3_server.cpp ${PROTO_LIST})
target_link_libraries(sample3_server.t ${LINK_ARGS})
add_executable(sample3_client.t sample3_client.cpp ${PROTO_LIST})
target_link_libraries(sample3_client.t ${LINK_ARGS})

add_executable(sample4_client.t sample4_client.cpp ${PROTO_LIST})
target_link_libraries(sample4_client.t ${LINK_ARGS})
